:bug: Visible text in input

--- a/wp-content/themes/ulo/src/styles/contents/_elements.scss
+++ b/wp-content/themes/ulo/src/styles/contents/_elements.scss
@@ -141,6 +141,7 @@ footer {
 
         input {
             background-color: white;
+            color: black;
             width: 15vw;
             display: inline-block;
             padding: 5px 10px;
